-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.0 Beta
-
None
-
Mageia Linux Cauldron x86_64, gcc 5.3.1
-
ed7d33ebcddc617a7e0197aa559e2fb15ce7a172
After recent updates from git, build fails with the following error:
g++ -c -pipe -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -Wdate-time -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_NO_TSLIB -DQT_NO_URL_CAST_FROM_STRING -DQT_NO_INTEGER_EVENT_COORDINATES -DQT_BUILD_QUICK_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_GUI_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I/mnt/store/Development/qt5/qtdeclarative/src/quick -I. -I/mnt/store/Development/qt5/qtdeclarative/src/quick -I../../include -I../../include/QtQuick -I../../include/QtQuick/5.7.0 -I../../include/QtQuick/5.7.0/QtQuick -I/mnt/store/Development/build_qt5.7_git/qtbase/include/QtGui/5.7.0 -I/mnt/store/Development/build_qt5.7_git/qtbase/include/QtGui/5.7.0/QtGui -I../../include/QtQml/5.7.0 -I../../include/QtQml/5.7.0/QtQml -I/mnt/store/Development/build_qt5.7_git/qtbase/include/QtCore/5.7.0 -I/mnt/store/Development/build_qt5.7_git/qtbase/include/QtCore/5.7.0/QtCore -I/mnt/store/Development/build_qt5.7_git/qtbase/include -I/mnt/store/Development/build_qt5.7_git/qtbase/include/QtGui -I../../include/QtQml -I/mnt/store/Development/build_qt5.7_git/qtbase/include/QtNetwork -I/mnt/store/Development/build_qt5.7_git/qtbase/include/QtCore -I.moc -isystem /usr/include/libdrm -I/mnt/store/Development/qt5/qtbase/mkspecs/linux-g++ -o .obj/qsgabstractrenderer.o /mnt/store/Development/qt5/qtdeclarative/src/quick/scenegraph/coreapi/qsgabstractrenderer.cpp
In file included from ../../include/QtQuick/5.7.0/QtQuick/private/../../../../../../../qt5/qtdeclarative/src/quick/items/qquickitem_p.h:57:0,
from ../../include/QtQuick/5.7.0/QtQuick/private/qquickitem_p.h:1,
from /mnt/store/Development/qt5/qtdeclarative/src/quick/util/qquickanimator.cpp:43:
../../include/QtQuick/5.7.0/QtQuick/private/../../../../../../../qt5/qtdeclarative/src/quick/items/qquickanchors_p_p.h:186:48: error: 'QQuickAnchorsPrivate::leftAnchorLine' is too small to hold all values of 'enum QQuickAnchors::Anchor' [-Werror]
QQuickAnchors::Anchor leftAnchorLine : 7;
^
../../include/QtQuick/5.7.0/QtQuick/private/../../../../../../../qt5/qtdeclarative/src/quick/items/qquickanchors_p_p.h:188:48: error: 'QQuickAnchorsPrivate::rightAnchorLine' is too small to hold all values of 'enum QQuickAnchors::Anchor' [-Werror]
QQuickAnchors::Anchor rightAnchorLine : 7;
^
../../include/QtQuick/5.7.0/QtQuick/private/../../../../../../../qt5/qtdeclarative/src/quick/items/qquickanchors_p_p.h:190:48: error: 'QQuickAnchorsPrivate::topAnchorLine' is too small to hold all values of 'enum QQuickAnchors::Anchor' [-Werror]
QQuickAnchors::Anchor topAnchorLine : 7;
^
../../include/QtQuick/5.7.0/QtQuick/private/../../../../../../../qt5/qtdeclarative/src/quick/items/qquickanchors_p_p.h:192:48: error: 'QQuickAnchorsPrivate::bottomAnchorLine' is too small to hold all values of 'enum QQuickAnchors::Anchor' [-Werror]
QQuickAnchors::Anchor bottomAnchorLine : 7;
^
../../include/QtQuick/5.7.0/QtQuick/private/../../../../../../../qt5/qtdeclarative/src/quick/items/qquickanchors_p_p.h:195:48: error: 'QQuickAnchorsPrivate::vCenterAnchorLine' is too small to hold all values of 'enum QQuickAnchors::Anchor' [-Werror]
QQuickAnchors::Anchor vCenterAnchorLine : 7;
^
../../include/QtQuick/5.7.0/QtQuick/private/../../../../../../../qt5/qtdeclarative/src/quick/items/qquickanchors_p_p.h:197:48: error: 'QQuickAnchorsPrivate::hCenterAnchorLine' is too small to hold all values of 'enum QQuickAnchors::Anchor' [-Werror]
QQuickAnchors::Anchor hCenterAnchorLine : 7;
^
../../include/QtQuick/5.7.0/QtQuick/private/../../../../../../../qt5/qtdeclarative/src/quick/items/qquickanchors_p_p.h:199:48: error: 'QQuickAnchorsPrivate::baselineAnchorLine' is too small to hold all values of 'enum QQuickAnchors::Anchor' [-Werror]
QQuickAnchors::Anchor baselineAnchorLine : 7;
^
- is duplicated by
-
QTBUG-53353 QQuickAnchorsPrivate::leftAnchorLine is too small to hold all values of enum QQuickAnchors::Anchor
-
- Closed
-
| For Gerrit Dashboard: QTBUG-53317 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 158969,3 | Fix anchor enum again, now for more broken versions of GCC. | 5.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |