Fix anchor enum again, now for more broken versions of GCC.

Apparently only very recent versions of gcc can correctly deduce that
the Anchor enum can be stored in a 7-bit bitfield. So to be sure we
don't run into compiler errors, do not specify the base type for any GCC
version.

Task-number: QTBUG-53317
Change-Id: I825946862dea1eabfb68a3fbe8cbd31bc71bdd10
Reviewed-by: Shawn Rutledge <shawn.rutledge@theqtcompany.com>